# zfs-auto-purge

./: README.md  arguments.py  main.py  policy.py  purge.py  pyproject.toml  zfs.py
src/zfsnap/: argparser.py  arguments.py  constants.py  entrypoint.py  utils.py  zfs.py
src/zfsnap-purge/: arguments.py  main.py  policy.py
src/zfsnap/create/: argparser.py  arguments.py  entrypoint.py
src/zfsnap/fetch/: entrypoint.py
src/zfsnap/list/: arguments.py  entrypoint.py
src/zfsnap/prune/: argparser.py  arguments.py  entrypoint.py  grouping.py  policy.py  prune.py  prune_snaps.py
src/zfsnap/pull/: __init__.py  argparser.py  arguments.py  entrypoint.py
src/zfsnap/push/: __init__.py  argparser.py  arguments.py  entrypoint.py
src/zfsnap/replication_common/: get_base_index.py  parse_remote.py  replicate.py  replicate_hierarchy.py  replicate_snaps.py  send_receive_snap.py
src/zfsnap_prune/: __main__.py  arguments.py  entrypoint.py  policy.py
src/zfsnap_prune/create/: entrypoint.py
src/zfsnap_prune/fetch/: arguments.py
src/zfsnap_prune/prune/: __init__.py  arguments.py  entrypoint.py  policy.py
src/zfsnap_purge/: __main__.py  arguments.py  policy.py  purge.py  zfs.py
src/zfsnappr/: __main__.py  argparser.py  arguments.py  entrypoint.py  filter.py  setup_logging.py  utils.py  zfs.py
src/zfsnappr/create/: arguments.py  entrypoint.py
src/zfsnappr/list/: argparser.py  arguments.py  entrypoint.py
src/zfsnappr/prune/: __init__.py  entrypoint.py  policy.py  prune_snaps.py
src/zfsnappr/pull/: arguments.py  entrypoint.py
src/zfsnappr/push/: entrypoint.py
src/zfsnappr/replication_common/: replicate_snaps.py  send_receive_snap.py
src/zfsnappr/tag/: __init__.py  argparser.py  arguments.py  entrypoint.py
(+3 files in other folders)
