[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zfsnappr"
version = "1.2.3"
authors = [
  { name="pschlo", email="author@example.com" },
]
description = "ZFS snapshot tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-dateutil"
]


[tool.hatch.build.targets.sdist]
# choose here what to include in sdist
# the wheel will only include src/zfsnappr anyway
# see https://discuss.python.org/t/should-sdists-include-docs-and-tests/14578
# include = [ ]
